# AI-Travel-Assistant

./: .gitignore  README.md  env.example  pyproject.toml  test.py
agent/: config.py  logger.py  main_agent.py  middleware_config.py  schema.py
agent/backends/: custom_opensandbox.py  sandbox_setup.py
agent/memory/: AGENTS.md  prompts.py
agent/middlewares/: context_injection.py  memory_update.py  skills_sync.py  tools_summarization.py  user_skills_restore.py
agent/subagents/: loader.py
agent/tools/: assign_skill.py  download_sandbox_file.py  hitl_tools.py  mcp_client.py  web_search.py
api_view/: __init__.py  agent_loader.py  config.py  db_bootstrap.py  dependencies.py  main.py  model_override.py  run.py
api_view/api/: chat.py  health.py  lifecycle.py  sessions.py
api_view/models/: __init__.py  events.py  requests.py
demo/: __init__.py  health.py  run_demo.py  seed_database.py
docs/: project_details_agent.md
gradio_ui/: __init__.py  app.py  client.py  run.py
mcp_server/: http_base.py  server_config.py  server_main.py
test/: agent_cli_test.py  conftest.py  test_agent_loader.py  test_agent_schema.py  test_api_chat.py  test_api_health.py  test_api_lifecycle.py  test_api_sessions.py  test_chat_service.py  test_config.py  test_data_base.py  test_db_bootstrap.py  test_demo_health.py  test_dependencies.py  test_flights_cancel.py  test_gradio_client.py  test_gradio_ui.py  test_message_converter.py  test_model_override.py  test_models.py  test_reservation_tables.py  test_sanitize_store_user_id.py  test_session_service.py  test_stream_mapper.py
(+20 files in other folders)
