[project]
name = "ai-travel-assistant"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.11",
    "dotenv>=0.9.9",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "opensandbox>=0.1.12",
    "pytz>=2026.2",
    "langchain-tavily>=0.2.18",
    "pyyaml>=6.0.3",
    "pymongo>=4.17.0",
    "langgraph-checkpoint-redis>=0.5.0",
    "langgraph-store-mongodb>=0.3.0",
    "pydantic>=2.13.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.2.0",
    "gradio>=5.20.0",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
pythonpath = ["."]
markers = [
    "integration: tests that touch the real SQLite backup (slower)",
]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning:starlette.testclient",
]
